--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "dependencies": {
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
-    "koa-router": "^7.2.1"
+    "koa-router": "^7.2.1",
+    "mime": "1.3.4",
+    "mysql": "^2.15.0",
+    "mysql2": "^1.4.2",
+    "mz": "^2.7.0",
+    "nunjucks": "^3.0.1",
+    "sequelize": "^4.22.0"
   }
 }
