--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
+    "koa-passport": "^4.0.1",
     "koa-router": "^7.2.1",
+    "koa-session2": "^2.2.5",
     "mime": "1.3.4",
     "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
