--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "jsonwebtoken": "^8.1.0",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
-    "koa-passport": "^4.0.1",
+    "koa-jwt": "^3.2.2",
     "koa-router": "^7.2.1",
-    "koa-session2": "^2.2.5",
     "mime": "1.3.4",
     "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
