--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
   "license": "ISC",
   "dependencies": {
     "babel-preset-es2015": "^6.24.1",
+    "glob": "^7.1.2",
     "jsonwebtoken": "^8.1.0",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-jwt": "^3.2.2",
     "koa-router": "^7.2.1",
     "mime": "1.3.4",
-    "mysql": "^2.15.0",
-    "mysql2": "^1.4.2",
+    "mysql2": "^1.5.3",
     "mz": "^2.7.0",
     "nunjucks": "^3.0.1",
     "sequelize": "^4.22.0",
