--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-preset-es2015": "^6.24.1",
+    "bluebird": "^3.5.1",
     "glob": "^7.1.2",
     "jsonwebtoken": "^8.1.0",
     "koa": "^2.3.0",
