--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.18.0",
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.5.1",
+    "cheerio": "^1.0.0-rc.2",
     "glob": "^7.1.2",
     "jsonwebtoken": "^8.1.0",
     "koa": "^2.3.0",
