--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ali-oss": "^6.0.1",
     "axios": "^0.18.0",
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.5.1",
